objects/Purchasing_Request__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Increase__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Approved PR needs to be increased re-submitted for approval. Approval Status will be switched back to draft. Once amount is updated you will have to re-submit for approval.</inlineHelpText>
        <label>Amount Increase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Vendor_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>link for PR to existing purchasing vendors</description>
        <label>Approved Vendor List</label>
        <referenceTo>Vendor_List__c</referenceTo>
        <relationshipLabel>Purchasing Requests</relationshipLabel>
        <relationshipName>Purchasing_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Mkt_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Mktg Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Chosen approver on web submission</inlineHelpText>
        <label>First Approver</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.PR_Approver__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchasing_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Needed_By_Date__c</fullName>
        <label>Needed By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to indicate the PO has been processes</inlineHelpText>
        <label>Order Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_to_be_sent_by__c</fullName>
        <label>Order Placed By</label>
        <picklist>
            <picklistValues>
                <fullName>Requestor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PayOnCreditCard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pay on Credit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pay_by_wire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pay by wire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchasing_Instructions__c</fullName>
        <label>Purchasing Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Purchasing_Justification__c</fullName>
        <label>Purchasing Justification</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Purchasing_Request_Lines__c</fullName>
        <inlineHelpText>Number of purchasing Request Line on MDF Request. Should be &apos;1&apos; to progress through approvals.</inlineHelpText>
        <label>Purchasing Request Lines</label>
        <summaryForeignKey>Purchase_Request_Lines__c.Purchasing_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recall_process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recall process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_For__c</fullName>
        <label>Requested For</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_PO_Via__c</fullName>
        <label>Send PO Via</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_PO_to_Vendor__c</fullName>
        <label>Send PO to Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <defaultValue>&quot;Silver Peak Systems&quot;  + BR() +
&quot;2860 De La Cruz Blvd&quot; +  BR()  +
&quot;Suite 100&quot; +  BR()  +
&quot;Santa Clara, CA 95050&quot; + BR()  +
&quot;408-935-1810&quot;</defaultValue>
        <label>Ship To</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Temporary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true or false</description>
        <label>Temporary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>Purchase_Request_Lines__c.Line_Total__c</summarizedField>
        <summaryForeignKey>Purchase_Request_Lines__c.Purchasing_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vendor_Address__c</fullName>
        <label>Vendor Address</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <inlineHelpText>Include contact name, phone and email</inlineHelpText>
        <label>Vendor Contact</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Email__c</fullName>
        <label>Vendor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <label>Purchasing Request</label>
    <listViews>
        <fullName>My_Purchase_Reqs</fullName>
        <columns>NAME</columns>
        <columns>Requested_By__c</columns>
        <columns>Requested_Date__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>First_Approver__c</columns>
        <columns>Needed_By_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Rejected,Budget Approval,Final Approval</value>
        </filters>
        <filters>
            <field>Temporary__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Order_Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open Purchase Reqs</label>
        <sharedTo>
            <group>Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_PR</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Order_to_be_sent_by__c</columns>
        <columns>First_Approver__c</columns>
        <columns>Needed_By_Date__c</columns>
        <columns>Requested_By__c</columns>
        <columns>Requested_Date__c</columns>
        <columns>Requested_For__c</columns>
        <columns>Approved_Vendor_List__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Temporary__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Final Approval,Budget Approval</value>
        </filters>
        <label>Open PR&apos;s</label>
        <sharedTo>
            <group>Operations</group>
            <role>CFO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Processed_PR</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Requested_By__c</columns>
        <columns>Requested_Date__c</columns>
        <columns>Needed_By_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Approved_Vendor_List__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Processed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Temporary__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Processed PR&apos;s</label>
        <sharedTo>
            <group>Operations</group>
            <role>CFO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rejected_PR</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Requested_By__c</columns>
        <columns>Requested_Date__c</columns>
        <columns>Needed_By_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Approved_Vendor_List__c</columns>
        <columns>Order_Processed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Rejected,Draft</value>
        </filters>
        <filters>
            <field>Temporary__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Rejected PR&apos;s</label>
        <sharedTo>
            <group>Operations</group>
            <role>CFO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Robin_s_PRs</fullName>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>Purchasing_Justification__c</columns>
        <columns>Requested_Date__c</columns>
        <columns>Requested_By__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Draft,Budget Approval,Final Approval</value>
        </filters>
        <label>Robin&apos;s PRs</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>PR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchasing Requests</pluralLabel>
    <recordTypes>
        <fullName>MDF_Request</fullName>
        <active>true</active>
        <label>MDF Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>